# deadstores

./: Makefile.am  README.md  ds_main.c
patches/: valgrind-3.15.0.patch
scripts/: print_result.py
